# fiap_orders_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: deployment.yml  sonarqube.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: 8d80b06128f0_create_tables.py
app/: config.py  database.py  main.py  mongo.py  pika.py
app/models/: customer.py  items.py  order.py
app/routers/: customer.py  items.py  order.py
app/schemas/: customer.py  http.py  items.py  order.py
app/tests/: test_main.py
