[project]
name = "food-orders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "asyncio>=3.4.3",
    "coverage>=7.6.12",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pika>=1.3.2",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pymongo>=3.12,<4.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "sqlalchemy>=2.0.38",
    "uuid>=1.30",
    "uvicorn>=0.34.0",
    "yarl>=1.18.3",
]
